--- a/HTML/index.html
+++ b/HTML/index.html
@@ -14,7 +14,13 @@
     <main class="content">
       <section class="quizBox"></section>
       <section class="quizSetting">
-        <div class="quizSettingBox"></div>
+        <div class="welcomeBox">
+          <svg viewBox="0 0 1280 720">
+            <text text-anchor="middle" x="50%" y="50%">Welcome</text>
+          </svg>
+        </div>
+        <div class="quizSettingBox">
+        </div>
       </section>
     </main>
     <script src="app.js" type="text/javascript"></script>
