--- a/HTML/index.html
+++ b/HTML/index.html
@@ -38,6 +38,7 @@
                 class="form-control"
                 aria-label="Sizing example input"
                 aria-describedby="inputGroup-sizing-default"
+                value="10"
               />
             </div>
             <div class="input-group mb-3">
@@ -45,10 +46,31 @@
                 >Select Category:</label
               >
               <select class="form-select" id="inputGroupSelect01">
-                <option selected value="">Choose...</option>
+                <option selected value="">Any Category</option>
               </select>
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <div class="input-group mb-3">
+              <label class="input-group-text" for="inputGroupSelect01"
+                >Select Difficulty:</label
+              >
+              <select class="form-select" id="inputGroupSelect01">
+                <option selected value="">Any Difficulty</option>
+                <option value="easy">Easy</option>
+                <option value="medium">Medium</option>
+                <option value="hard">Hard</option>
+              </select>
+            </div>
+            <div class="input-group mb-3">
+              <label class="input-group-text" for="inputGroupSelect01"
+                >Select Type:</label
+              >
+              <select class="form-select" id="inputGroupSelect01">
+                <option selected value="">Any Type</option>
+                <option value="multiple">Multiple Choice</option>
+                <option value="boolean">True Or False</option>
+              </select>
+            </div>
+            <button type="submit" class="btn btn-outline-primary">Start Game</button>
           </form>
         </div>
       </section>
