--- a/HTML/index.html
+++ b/HTML/index.html
@@ -5,26 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quiz Game</title>
+    <!-- link bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <!-- link CSS file -->
     <link rel="stylesheet" href="../CSS/style.css" />
   </head>
   <body>
+    <!-- create cloud animation background -->
     <aside class="bgCloud">
       <div class="cloud-intro"></div>
     </aside>
+    <!-- start main content -->
     <main class="content">
+      <!-- start quiz container -->
       <section class="quizBox"></section>
+      <!-- start quiz setting container -->
       <section class="quizSetting">
+        <!-- welcome text animation -->
         <div class="welcomeBox">
           <svg viewBox="0 0 1280 720">
             <text text-anchor="middle" x="50%" y="50%">Welcome</text>
           </svg>
         </div>
+        <!-- input form value for start game -->
         <div class="quizSettingBox">
           <form class="quizSettingBoxInput">
             <div class="input-group mb-3">
@@ -70,11 +78,17 @@
                 <option value="boolean">True Or False</option>
               </select>
             </div>
-            <button type="submit" class="btn btn-outline-primary">Start Game</button>
+            <button type="submit" class="btn btn-outline-primary">
+              Start Game
+            </button>
           </form>
         </div>
+        <!-- end form -->
       </section>
+      <!-- end quiz control setting -->
     </main>
+    <!-- end main content -->
+    <!-- link bootstrap script -->
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
       integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
@@ -85,6 +99,7 @@
       integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
       crossorigin="anonymous"
     ></script>
+    <!-- link JavaScript file -->
     <script src="app.js" type="text/javascript"></script>
   </body>
 </html>
