--- a/HTML/index.html
+++ b/HTML/index.html
@@ -23,17 +23,45 @@
     <!-- start main content -->
     <main class="content">
       <!-- start quiz container -->
-      <section class="quizBox"></section>
+      <section class="quizBox">
+        <div class="container">
+          <div class="progress">
+            <div
+              class="progress-bar progress-bar-striped progress-bar-animated bg-info"
+              role="progressbar"
+              aria-valuenow="75"
+              aria-valuemin="0"
+              aria-valuemax="100"
+              style="width: 75%"
+            ></div>
+          </div>
+          <div class="row rowBg">
+            <div class="col colBg">
+              <span class="detail">Category:</span
+              ><span class="detailInfo">Entertainment: Musicals & Theatres</span>
+            </div>
+            <div class="col colBg">
+              <span class="detail">Type:</span
+              ><span class="detailInfo">multiple</span>
+            </div>
+            <div class="col colBg">
+              <span class="detail">Difficulty:</span
+              ><span class="detailInfo">medium</span>
+            </div>
+          </div>
+
+        </div>
+      </section>
       <!-- start quiz setting container -->
-      <section class="quizSetting">
-        <!-- welcome text animation -->
-        <div class="welcomeBox">
+      <!-- <section class="quizSetting"> -->
+      <!-- welcome text animation -->
+      <!-- <div class="welcomeBox">
           <svg viewBox="0 0 1280 720">
             <text text-anchor="middle" x="50%" y="50%">Welcome</text>
           </svg>
-        </div>
-        <!-- input form value for start game -->
-        <div class="quizSettingBox">
+        </div> -->
+      <!-- input form value for start game -->
+      <!-- <div class="quizSettingBox">
           <form class="quizSettingBoxInput">
             <div class="input-group mb-3">
               <span class="input-group-text" id="inputGroup-sizing-default"
@@ -82,9 +110,9 @@
               Start Game
             </button>
           </form>
-        </div>
-        <!-- end form -->
-      </section>
+        </div> -->
+      <!-- end form -->
+      <!-- </section> -->
       <!-- end quiz control setting -->
     </main>
     <!-- end main content -->
