add element for answer

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -25,7 +25,7 @@
       <!-- start quiz container -->
       <section class="quizBox">
         <div class="container">
-          <div class="progress">
+          <div class="progress row">
             <div
               class="progress-bar progress-bar-striped progress-bar-animated bg-info"
               role="progressbar"
@@ -38,7 +38,9 @@
           <div class="row rowBg">
             <div class="col colBg">
               <span class="detail">Category:</span
-              ><span class="detailInfo">Entertainment: Musicals & Theatres</span>
+              ><span class="detailInfo"
+                >Entertainment: Musicals & Theatres</span
+              >
             </div>
             <div class="col colBg">
               <span class="detail">Type:</span
@@ -49,7 +51,65 @@
               ><span class="detailInfo">medium</span>
             </div>
           </div>
-
+          <div class="row rowBg quiz">
+            <div class="col quizColBg">
+              <span class="detail">Question:</span>
+              <span class="detailInfo"
+                >In physics, conservation of energy and conservation of momentum
+                are both consequences of which of the following?</span
+              >
+            </div>
+          </div>
+          <div class="row rowBg">
+            <div class="col colBg">
+              <div
+                class="btn-group-vertical answer"
+                role="group"
+                aria-label="Vertical radio toggle button group"
+              >
+                <input
+                  type="radio"
+                  class="btn-check"
+                  name="vbtn-radio"
+                  id="vbtn-radio1"
+                  autocomplete="off"
+                />
+                <label class="btn btn-outline-success answerChek" for="vbtn-radio1"
+                  >Radio 1</label
+                >
+                <input
+                  type="radio"
+                  class="btn-check"
+                  name="vbtn-radio"
+                  id="vbtn-radio2"
+                  autocomplete="off"
+                />
+                <label class="btn btn-outline-success answerChek" for="vbtn-radio2"
+                  >Radio 2</label
+                >
+                <input
+                  type="radio"
+                  class="btn-check"
+                  name="vbtn-radio"
+                  id="vbtn-radio3"
+                  autocomplete="off"
+                />
+                <label class="btn btn-outline-success answerChek" for="vbtn-radio3"
+                  >Radio 3</label
+                >
+                <input
+                  type="radio"
+                  class="btn-check"
+                  name="vbtn-radio"
+                  id="vbtn-radio4"
+                  autocomplete="off"
+                />
+                <label class="btn btn-outline-success answerChek" for="vbtn-radio4"
+                  >Radio 4</label
+                >
+              </div>
+            </div>
+          </div>
         </div>
       </section>
       <!-- start quiz setting container -->
