multiple answer box is completed

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -61,7 +61,7 @@
             </div>
           </div>
           <div class="row rowBg">
-            <div class="col colBg">
+            <div class="col colBg colBgAnswer">
               <div
                 class="btn-group-vertical answer"
                 role="group"
@@ -108,6 +108,7 @@
                   >Radio 4</label
                 >
               </div>
+              <button type="button" class="btn btn-success btnAnswerChek">Check the answer</button>
             </div>
           </div>
         </div>
