boolean answer box is completed

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -62,7 +62,7 @@
           </div>
           <div class="row rowBg">
             <div class="col colBg colBgAnswer">
-              <div
+              <!-- <div
                 class="btn-group-vertical answer"
                 role="group"
                 aria-label="Vertical radio toggle button group"
@@ -107,8 +107,41 @@
                 <label class="btn btn-outline-success answerChek" for="vbtn-radio4"
                   >Radio 4</label
                 >
+              </div> -->
+              <div
+                class="btn-group answer"
+                role="group"
+                aria-label="Basic radio toggle button group"
+              >
+                <input
+                  type="radio"
+                  class="btn-check"
+                  name="btnradio"
+                  id="btnradio1"
+                  autocomplete="off"
+                />
+                <label
+                  class="btn btn-outline-success answerChek"
+                  for="btnradio1"
+                  >Radio 1</label
+                >
+
+                <input
+                  type="radio"
+                  class="btn-check"
+                  name="btnradio"
+                  id="btnradio2"
+                  autocomplete="off"
+                />
+                <label
+                  class="btn btn-outline-success answerChek"
+                  for="btnradio2"
+                  >Radio 2</label
+                >
               </div>
-              <button type="button" class="btn btn-success btnAnswerChek">Check the answer</button>
+              <button type="button" class="btn btn-success btnAnswerChek">
+                Check the answer
+              </button>
             </div>
           </div>
         </div>
