--- a/HTML/index.html
+++ b/HTML/index.html
@@ -5,26 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quiz Game</title>
-    <!-- link bootstrap -->
+    <!-- !link bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <!-- link CSS file -->
+    <!-- !link CSS file -->
     <link rel="stylesheet" href="../CSS/style.css" />
   </head>
   <body>
-    <!-- create cloud animation background -->
+    <!-- !create cloud animation background -->
     <aside class="bgCloud">
       <div class="cloud-intro"></div>
     </aside>
-    <!-- start main content -->
+    <!-- !start main content -->
     <main class="content">
-      <!-- start quiz container -->
+      <!-- !start quiz container -->
       <section class="quizBox">
         <div class="container">
+          <!-- !progress line -->
           <div class="progress row">
             <div
               class="progress-bar progress-bar-striped progress-bar-animated bg-info"
@@ -35,6 +36,7 @@
               style="width: 75%"
             ></div>
           </div>
+          <!-- !show quiz detail -->
           <div class="row rowBg">
             <div class="col colBg">
               <span class="detail">Category:</span
@@ -51,6 +53,7 @@
               ><span class="detailInfo">medium</span>
             </div>
           </div>
+          <!-- !show quiz text -->
           <div class="row rowBg quiz">
             <div class="col quizColBg">
               <span class="detail">Question:</span>
@@ -60,21 +63,26 @@
               >
             </div>
           </div>
+          <!-- !answer -->
           <div class="row rowBg">
             <div class="col colBg colBgAnswer">
+              <!-- !multiple answer box -->
               <!-- <div
                 class="btn-group-vertical answer"
                 role="group"
                 aria-label="Vertical radio toggle button group"
-              >
-                <input
+              > -->
+              <!-- !the multiple answer input is radio button -->
+              <!-- <input
                   type="radio"
                   class="btn-check"
                   name="vbtn-radio"
                   id="vbtn-radio1"
                   autocomplete="off"
                 />
-                <label class="btn btn-outline-success answerChek" for="vbtn-radio1"
+                <label
+                  class="btn btn-outline-success answerChek"
+                  for="vbtn-radio1"
                   >Radio 1</label
                 >
                 <input
@@ -84,7 +92,9 @@
                   id="vbtn-radio2"
                   autocomplete="off"
                 />
-                <label class="btn btn-outline-success answerChek" for="vbtn-radio2"
+                <label
+                  class="btn btn-outline-success answerChek"
+                  for="vbtn-radio2"
                   >Radio 2</label
                 >
                 <input
@@ -94,7 +104,9 @@
                   id="vbtn-radio3"
                   autocomplete="off"
                 />
-                <label class="btn btn-outline-success answerChek" for="vbtn-radio3"
+                <label
+                  class="btn btn-outline-success answerChek"
+                  for="vbtn-radio3"
                   >Radio 3</label
                 >
                 <input
@@ -104,16 +116,20 @@
                   id="vbtn-radio4"
                   autocomplete="off"
                 />
-                <label class="btn btn-outline-success answerChek" for="vbtn-radio4"
+                <label
+                  class="btn btn-outline-success answerChek"
+                  for="vbtn-radio4"
                   >Radio 4</label
                 >
               </div> -->
-              <div
+              <!-- !boolean answer box -->
+              <!-- <div
                 class="btn-group answer"
                 role="group"
                 aria-label="Basic radio toggle button group"
-              >
-                <input
+              > -->
+              <!-- !the multiple answer input is radio button -->
+              <!-- <input
                   type="radio"
                   class="btn-check"
                   name="btnradio"
@@ -125,7 +141,6 @@
                   for="btnradio1"
                   >Radio 1</label
                 >
-
                 <input
                   type="radio"
                   class="btn-check"
@@ -138,7 +153,8 @@
                   for="btnradio2"
                   >Radio 2</label
                 >
-              </div>
+              </div> -->
+              <!-- !button for check the answer -->
               <button type="button" class="btn btn-success btnAnswerChek">
                 Check the answer
               </button>
@@ -146,16 +162,16 @@
           </div>
         </div>
       </section>
-      <!-- start quiz setting container -->
-      <!-- <section class="quizSetting"> -->
-      <!-- welcome text animation -->
-      <!-- <div class="welcomeBox">
+      <!-- !start quiz setting container -->
+      <section class="quizSetting">
+      <!-- !welcome text animation -->
+      <div class="welcomeBox">
           <svg viewBox="0 0 1280 720">
             <text text-anchor="middle" x="50%" y="50%">Welcome</text>
           </svg>
-        </div> -->
-      <!-- input form value for start game -->
-      <!-- <div class="quizSettingBox">
+        </div>
+      <!-- !input form value for start game -->
+      <div class="quizSettingBox">
           <form class="quizSettingBoxInput">
             <div class="input-group mb-3">
               <span class="input-group-text" id="inputGroup-sizing-default"
@@ -204,13 +220,13 @@
               Start Game
             </button>
           </form>
-        </div> -->
-      <!-- end form -->
-      <!-- </section> -->
-      <!-- end quiz control setting -->
+        </div>
+      <!-- !end form -->
+      </section>
+      <!-- !end quiz control setting -->
     </main>
-    <!-- end main content -->
-    <!-- link bootstrap script -->
+    <!-- !end main content -->
+    <!-- !link bootstrap script -->
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
       integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
@@ -221,7 +237,7 @@
       integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
       crossorigin="anonymous"
     ></script>
-    <!-- link JavaScript file -->
+    <!-- !link JavaScript file -->
     <script src="app.js" type="text/javascript"></script>
   </body>
 </html>
