--- a/HTML/index.html
+++ b/HTML/index.html
@@ -164,14 +164,14 @@
       </section>
       <!-- !start quiz setting container -->
       <section class="quizSetting">
-      <!-- !welcome text animation -->
-      <div class="welcomeBox">
+        <!-- !welcome text animation -->
+        <div class="welcomeBox">
           <svg viewBox="0 0 1280 720">
             <text text-anchor="middle" x="50%" y="50%">Welcome</text>
           </svg>
         </div>
-      <!-- !input form value for start game -->
-      <div class="quizSettingBox">
+        <!-- !input form value for start game -->
+        <div class="quizSettingBox">
           <form class="quizSettingBoxInput">
             <div class="input-group mb-3">
               <span class="input-group-text" id="inputGroup-sizing-default"
@@ -181,25 +181,25 @@
                 type="number"
                 min="1"
                 max="100"
-                class="form-control"
+                class="form-control inputNumber"
                 aria-label="Sizing example input"
                 aria-describedby="inputGroup-sizing-default"
                 value="10"
               />
             </div>
             <div class="input-group mb-3">
-              <label class="input-group-text" for="inputGroupSelect01"
+              <label class="input-group-text" for="inputSelectCategory"
                 >Select Category:</label
               >
-              <select class="form-select" id="inputGroupSelect01">
+              <select class="form-select" id="inputSelectCategory">
                 <option selected value="">Any Category</option>
               </select>
             </div>
             <div class="input-group mb-3">
-              <label class="input-group-text" for="inputGroupSelect01"
+              <label class="input-group-text" for="inputSelectDifficulty"
                 >Select Difficulty:</label
               >
-              <select class="form-select" id="inputGroupSelect01">
+              <select class="form-select" id="inputSelectDifficulty">
                 <option selected value="">Any Difficulty</option>
                 <option value="easy">Easy</option>
                 <option value="medium">Medium</option>
@@ -207,10 +207,10 @@
               </select>
             </div>
             <div class="input-group mb-3">
-              <label class="input-group-text" for="inputGroupSelect01"
+              <label class="input-group-text" for="inputSelectType"
                 >Select Type:</label
               >
-              <select class="form-select" id="inputGroupSelect01">
+              <select class="form-select" id="inputSelectType">
                 <option selected value="">Any Type</option>
                 <option value="multiple">Multiple Choice</option>
                 <option value="boolean">True Or False</option>
@@ -221,7 +221,7 @@
             </button>
           </form>
         </div>
-      <!-- !end form -->
+        <!-- !end form -->
       </section>
       <!-- !end quiz control setting -->
     </main>
