create category selector and get question

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -33,7 +33,7 @@
               aria-valuenow="75"
               aria-valuemin="0"
               aria-valuemax="100"
-              style="width: 75%"
+              style="width: 100%"
             ></div>
           </div>
           <!-- !show quiz detail -->
@@ -216,7 +216,7 @@
                 <option value="boolean">True Or False</option>
               </select>
             </div>
-            <button type="submit" class="btn btn-outline-primary">
+            <button type="submit" class="btn btn-outline-primary btnStartGame">
               Start Game
             </button>
           </form>
@@ -238,6 +238,6 @@
       crossorigin="anonymous"
     ></script>
     <!-- !link JavaScript file -->
-    <script src="app.js" type="text/javascript"></script>
+    <script src="../JavaScript/app.js" type="text/javascript"></script>
   </body>
 </html>
