completed first step question box

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -40,24 +40,24 @@
           <div class="row rowBg">
             <div class="col colBg">
               <span class="detail">Category:</span
-              ><span class="detailInfo"
+              ><span class="detailInfo category"
                 >Entertainment: Musicals & Theatres</span
               >
             </div>
             <div class="col colBg">
               <span class="detail">Type:</span
-              ><span class="detailInfo">multiple</span>
+              ><span class="detailInfo type">multiple</span>
             </div>
             <div class="col colBg">
               <span class="detail">Difficulty:</span
-              ><span class="detailInfo">medium</span>
+              ><span class="detailInfo difficulty">medium</span>
             </div>
           </div>
           <!-- !show quiz text -->
           <div class="row rowBg quiz">
             <div class="col quizColBg">
               <span class="detail">Question:</span>
-              <span class="detailInfo"
+              <span class="detailInfo question"
                 >In physics, conservation of energy and conservation of momentum
                 are both consequences of which of the following?</span
               >
