Create answer options

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -67,13 +67,13 @@
           <div class="row rowBg">
             <div class="col colBg colBgAnswer">
               <!-- !multiple answer box -->
-              <!-- <div
-                class="btn-group-vertical answer"
+              <div
+                class="btn-group-vertical answer hiddenBox multipleAnswer"
                 role="group"
                 aria-label="Vertical radio toggle button group"
-              > -->
-              <!-- !the multiple answer input is radio button -->
-              <!-- <input
+              >
+                <!-- !the multiple answer input is radio button -->
+                <input
                   type="radio"
                   class="btn-check"
                   name="vbtn-radio"
@@ -81,7 +81,7 @@
                   autocomplete="off"
                 />
                 <label
-                  class="btn btn-outline-success answerChek"
+                  class="btn btn-outline-success answerChek answerChek1"
                   for="vbtn-radio1"
                   >Radio 1</label
                 >
@@ -93,7 +93,7 @@
                   autocomplete="off"
                 />
                 <label
-                  class="btn btn-outline-success answerChek"
+                  class="btn btn-outline-success answerChek answerChek2"
                   for="vbtn-radio2"
                   >Radio 2</label
                 >
@@ -105,7 +105,7 @@
                   autocomplete="off"
                 />
                 <label
-                  class="btn btn-outline-success answerChek"
+                  class="btn btn-outline-success answerChek answerChek3"
                   for="vbtn-radio3"
                   >Radio 3</label
                 >
@@ -117,19 +117,19 @@
                   autocomplete="off"
                 />
                 <label
-                  class="btn btn-outline-success answerChek"
+                  class="btn btn-outline-success answerChek answerChek4"
                   for="vbtn-radio4"
                   >Radio 4</label
                 >
-              </div> -->
+              </div>
               <!-- !boolean answer box -->
-              <!-- <div
-                class="btn-group answer"
+              <div
+                class="btn-group answer hiddenBox booleanAnswer"
                 role="group"
                 aria-label="Basic radio toggle button group"
-              > -->
-              <!-- !the multiple answer input is radio button -->
-              <!-- <input
+              >
+                <!-- !the multiple answer input is radio button -->
+                <input
                   type="radio"
                   class="btn-check"
                   name="btnradio"
@@ -137,7 +137,7 @@
                   autocomplete="off"
                 />
                 <label
-                  class="btn btn-outline-success answerChek"
+                  class="btn btn-outline-success answerChek answerChek1"
                   for="btnradio1"
                   >Radio 1</label
                 >
@@ -149,11 +149,11 @@
                   autocomplete="off"
                 />
                 <label
-                  class="btn btn-outline-success answerChek"
+                  class="btn btn-outline-success answerChek answerChek2"
                   for="btnradio2"
                   >Radio 2</label
                 >
-              </div> -->
+              </div>
               <!-- !button for check the answer -->
               <button type="button" class="btn btn-success btnAnswerChek">
                 Check the answer
