--- a/HTML/index.html
+++ b/HTML/index.html
@@ -12,6 +12,10 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"
+    />
     <!-- !link CSS file -->
     <link rel="stylesheet" href="../CSS/style.css" />
   </head>
@@ -162,8 +166,18 @@
           </div>
         </div>
       </section>
+      <!-- !correct answer animaeion -->
+      <section class="correct">
+        <div class="correctCircle">
+          <span class="cover1"></span>
+          <span class="cover2"></span>
+          <span class="correctMark"><i class="bi bi-check-lg"></i></span>
+        </div>
+      </section>
+      <!-- !wrong answer animaeion -->
+      <section></section>
       <!-- !start quiz setting container -->
-      <section class="quizSetting">
+      <section class="quizSetting" style="display: none">
         <!-- !welcome text animation -->
         <div class="welcomeBox">
           <svg viewBox="0 0 1280 720">
@@ -238,6 +252,6 @@
       crossorigin="anonymous"
     ></script>
     <!-- !link JavaScript file -->
-    <script src="../JavaScript/app.js" type="text/javascript"></script>
+    <!-- <script src="../JavaScript/app.js" type="text/javascript"></script> -->
   </body>
 </html>
